// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`partition > block scope hoisting (REQ-007) > should handle chained calls within block 1`] = `
"import { jest } from "@rbxts/jest-globals";
function setup() {
    jest.mock(script.Parent.a).unmock(script.Parent.b);
    console.log("before");
}
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist in beforeEach callback 1`] = `
"import { jest, beforeEach } from "@rbxts/jest-globals";
beforeEach(() => {
    jest.mock(script.Parent.foo);
    jest.mock(script.Parent.bar);
    console.log("setup");
});
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist jest.mock in nested blocks 1`] = `
"import { jest } from "@rbxts/jest-globals";
function outer() {
    if (true) {
        jest.mock(script.Parent.foo);
        console.log("before");
    }
}
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist jest.mock within arrow function body 1`] = `
"import { jest } from "@rbxts/jest-globals";
const setup = () => {
    jest.mock(script.Parent.foo);
    console.log("before");
};
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist jest.mock within catch block 1`] = `
"import { jest } from "@rbxts/jest-globals";
try { }
catch (e) {
    jest.mock(script.Parent.foo);
    console.log("before");
}
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist jest.mock within function body 1`] = `
"import { jest } from "@rbxts/jest-globals";
function setup() {
    jest.mock(script.Parent.foo);
    console.log("before");
}
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist jest.mock within if block body 1`] = `
"import { jest } from "@rbxts/jest-globals";
if (true) {
    jest.mock(script.Parent.foo);
    console.log("hello");
}
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist jest.mock within try block 1`] = `
"import { jest } from "@rbxts/jest-globals";
try {
    jest.mock(script.Parent.foo);
    console.log("before");
}
catch (e) { }
"
`;

exports[`partition > block scope hoisting (REQ-007) > should hoist mock-prefix vars within block 1`] = `
"import { jest } from "@rbxts/jest-globals";
function setup() {
    const mockFoo = jest.fn();
    jest.mock(script.Parent.foo, () => ({ foo: mockFoo }));
    console.log("between");
}
"
`;

exports[`partition > block scope hoisting (REQ-007) > should leave block unchanged when no hoistable calls 1`] = `
"import { jest } from "@rbxts/jest-globals";
function setup() {
    console.log("hello");
    const x = 1;
}
"
`;

exports[`partition > mock-prefix variable hoisting (REQ-006) > should hoist multiple mock-prefix vars 1`] = `
"import { jest } from "@rbxts/jest-globals";
const mockA = jest.fn();
const mockB = jest.fn();
jest.mock(script.Parent.a, () => ({ a: mockA, b: mockB }));
import { a } from "./a";
"
`;

exports[`partition > mock-prefix variable hoisting (REQ-006) > should hoist single mock-prefix var referenced in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
const mockFoo = jest.fn();
jest.mock(script.Parent.foo, () => ({ foo: mockFoo }));
import { foo } from "./foo";
"
`;

exports[`partition > pure constant hoisting (REQ-009) > should hoist pure constant in block scope 1`] = `
"import { jest } from "@rbxts/jest-globals";
function setup() {
    const X = 42;
    jest.mock(script.Parent.foo, () => ({ value: X }));
    console.log("between");
}
"
`;

exports[`partition > should be idempotent when already hoisted 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock(script.Parent.foo);
import { foo } from "./foo";
"
`;

exports[`partition > should hoist both mock and unmock 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock(script.Parent.a);
jest.unmock(script.Parent.b);
import { a } from "./a";
"
`;

exports[`partition > should hoist jest.mock above imports 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock(script.Parent.foo);
import { foo } from "./foo";
"
`;

exports[`partition > should hoist jest.unmock above imports 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.unmock(script.Parent.foo);
import { foo } from "./foo";
"
`;

exports[`partition > should ignore non-jest objects 1`] = `
"import { foo } from "./foo";
other.mock("./foo");
"
`;

exports[`partition > should keep @rbxts/jest-globals import first 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock(script.Parent.foo);
import { foo } from "./foo";
"
`;

exports[`partition > should leave non-hoistable jest calls in place 1`] = `
"import { foo } from "./foo";
jest.dontMock("./foo");
"
`;

exports[`partition > should not hoist non-call expression statements 1`] = `
"import { foo } from "./foo";
x = 5;
"
`;

exports[`partition > should not hoist plain function calls 1`] = `
"import { foo } from "./foo";
foo("./bar");
"
`;

exports[`partition > should pass through unchanged when no jest calls 1`] = `
"import { foo } from "./foo";
console.log(foo);
"
`;

exports[`partition > should preserve factory functions in jest.mock 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock(script.Parent.foo, () => ({ default: 42 }));
import { foo } from "./foo";
"
`;
